spark-youtube : corona-virus data analysis - added input data files - using Arrays.asList() which ic compatible with java-8